kubernetes/001_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: easy-shop-ns
  labels:
    environment: production
