kubernetes/002_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-shop-deployment
  namespace: easy-shop-ns
  labels:
    app: easy-shop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easy-shop
  template:
    metadata:
      labels:
        app: easy-shop
    spec:
      containers:
      - name: easy-shop
        image: vaibhav1399/easy-shop-app:latest
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
