kubernetes/011_redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: easy-shop-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easy-shop-redis
  template:
    metadata:
      labels:
        app: easy-shop-redis
    spec:
      containers:
        - name: easy-shop-redis
          image: redis:7.0-alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            exec:
              command:
              - redis-cli
              - ping
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
              - redis-cli
              - ping
            initialDelaySeconds: 5
            periodSeconds: 10
