kubernetes/003_service.yml
apiVersion: v1
kind: Service

metadata:
  name: easy-shop-svc
  namespace: easy-shop-ns

spec:
  selector:
    app: easy-shop
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
