kubernetes/007_mongodb_service.yml
apiVersion: v1
kind: Service
metadata:
  name: easy-shop-db
  namespace: easy-shop-ns
spec:
  selector:
    app: easy-shop-db
  ports:
  - port: 27017
    targetPort: 27017
